<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Solitaire</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="by_droidcluster">Solitaire by droidcluster</string>

    <!-- score -->
    <string name="score_moves">Moves</string>
    <string name="score_time">Time</string>
    <string name="score_points">Score</string>
    <string name="score_best">Best</string>

    <!-- menus -->
    <string name="menu_deal">Deal</string>
    <string name="menu_new">New Game</string>
    <string name="menu_replay">Replay</string>
    <string name="menu_undo">Undo</string>
    <string name="menu_auto_finish">Auto-finish</string>
    <string name="menu_title_actions">Actions</string>
    <string name="menu_title_game_mode">Game Mode</string>
    <string name="menu_draw1">Draw One (easy)</string>
    <string name="menu_draw3">Draw Three (hard)</string>

    <!-- total stats -->
    <string name="stats_title">S T A T S:</string>
    <string name="stats_points">Points:</string>
    <string name="best_points">Best Score</string>
    <string name="best_moves">Least Moves</string>
    <string name="best_time">Best Time</string>
    <string name="total_moves">Total Moves:</string>
    <string name="total_games">Games Played</string>
    <string name="total_time">Total Time:</string>
    <string name="win">Won</string>
    <string name="lost">Lost</string>
    <string name="deals">Deals:</string>

    <!-- game stats -->
    <string name="game_stats_title">W E L L   D O N E!</string>
    <string name="moves">Moves:</string>
    <string name="time">Time:</string>
    
    <!-- hints -->
    <string name="hint0_title">Welcome!</string>
    <string name="hint0_text">You can open and close the\nmenu by tapping anywhere\non the background.</string>
    <string name="hint1_title">Auto-Finish</string>
    <string name="hint1_text">Tap the finish flag menu\nto automatically finish\nand win the game.</string>
    <string name="hint2_title">Undo</string>
    <string name="hint2_text">Tap this menu item if\nyou want to undo your\nlast move.</string>
    <string name="close">Close</string>
    
    <!-- settings -->
    <string name="settings_gamebg">Game Background</string>
    <string name="settings_cardbg">Card Design</string>
    <string name="settings_select_picture">Select Picture</string>
    <string name="settings_full_screen_title">Full Screen</string>
    <string name="settings_showing_status_bar">Showing status bar (cards may be smaller)</string>
    <string name="settings_using_full_screen">Using full screen (larger cards)</string>
    <string name="settings_using_default">Using default</string>
    <string name="settings_using_selected_image">Using selected image</string>
    <string name="settings_custom_cardbg">Custom Card Design</string>
    <string name="settings_custom_gamebg">Custom Game Background</string>
    <string name="settings_left_hand_off">Game Deck is on the Right</string>
    <string name="settings_left_hand_on">Game Deck is on the Left</string>
    <string name="settings_left_hand_title">Left Hand</string>
    <string name="settings_draw_three_off">Drawing cards one by one</string>
    <string name="settings_draw_three_on">Drawing three cards</string>
    <string name="settings_draw_three_title">Draw Three</string>

    <!-- AppRater -->
    <string name="app_rater_title">Rate Solitaire</string>
    <string name="app_rater_explanation">Do you like this game? We would be very happy if you could rate our game on Google Play. Thanks for your support!</string>
    <string name="app_rater_button_now">Rate now</string>
    <string name="app_rater_button_later">Later</string>
    <string name="app_rater_button_never">No, thanks</string>
    
    <!-- prefs -->
    <string name="pref_full_screen">com.droidcluster.solitaire.pref.fullScreen</string>
    <string name="pref_left_hand">com.droidcluster.solitaire.pref.leftHand</string>
    <string name="pref_draw_three">com.droidcluster.solitaire.pref.drawThree</string>
    <string name="pref_card_background">com.droidcluster.solitaire.pref.cardBackground</string>
    <string name="pref_card_background_enable">com.droidcluster.solitaire.pref.cardBackgroundEnable</string>
    <string name="pref_game_background">com.droidcluster.solitaire.pref.gameBackground</string>
    <string name="pref_game_background_enable">com.droidcluster.solitaire.pref.gameBackgroundEnable</string>

</resources>